# ISR_code

./: .gitignore  CMakeLists.txt  README.md  _r_e_a_d_m_e_8md.html  about.html  about_8dox.html  annotated.html  class_edge.html  class_network.html  class_network___synthesizer.html  class_statement.html  class_statements.html  class_topic__generator.html  class_u_f___d_s.html  dir_138aff360eb965c43b94267b8d1ce09e.html  dir_31a378c84b956866319ca9d9294f1959.html  edge_8h.html  files.html  index.html  modules.html  namespaces.html  network_8h.html  network__synthesizer_8h.html  pages.html  perplexity__utils_8h.html  searchdata-v2.js  statement_8h.html  statements_8h.html  topic__generator_8h.html  uf__ds_8h.html
.github/workflows/: documentation.yaml
documentation/: CMakeLists.txt  Doxyfile
documentation/pages/: about.dox
include/: edge.h  network.h  network_synthesizer.h  perplexity_utils.h  statement.h  statements.h  topic_generator.h  uf_ds.h
include/factify/: factify.h
input/: politifact_short.json
java/: hello_world.java  topic_model.java
pyfiles/: community_detector.py
source/: edge.cpp  greeter.cpp  network.cpp  network_synthesizer.cpp  perplexity_utils.cpp  statement.cpp  statements.cpp  topic_generator.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: factify.cpp
